# Convex-Hull

./: README.md
Convex_Hull_Visual/: Convex_Hull_Visual.sln
Convex_Hull_Visual/Convex_Hull_Visual/: Convex_Hull_Visual.vcxproj
Convex_Hull_Visual/Convex_Hull_Visual/Debug/: Convex_Hull_Visual.exe.recipe  Convex_Hull_Visual.ilk  vc142.idb
Convex_Hull_Visual/Convex_Hull_Visual/Debug/Convex_H.5e45d118.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Convex_Hull_Visual.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Final Project/: CMakeLists.txt  ConvexHull.cpp  ConvexHullspagetti.cpp  Finger.cpp  Finger.h  GrahamScan.h  Menu.cpp  Menu.h  Point.cpp  Point.h  Sandbox.cpp  Sandbox.h  Spagetti.h  VisualConvexHull.cpp  VisualConvexHull.h  ch.cpp  ch.h  main.cpp  testfile1.txt
Final Project/Config/: window.ini
Final Project/HelloSFML/: main.cpp  test.cpp
Menu/: CMakeLists.txt  Menu.cpp  Menu.h  main.cpp
OpenCV/: CMakeLists.txt  main.cpp
